@@ -4,7 +4,7 @@
 <project name="Plealog-bioinfo-core" default="help" basedir=".">
 
 <property name="pbc.libName"    value="pb-core" />
-<property name="pbc.LibVersion" value="6.0.0" />
+<property name="pbc.LibVersion" value="6.1.0" />
 
 <property name="compile.optimize" value="on" />
 <property name="compile.debug"    value="off" />
@@ -77,6 +77,7 @@
           debug="${compile.debug}"
           optimize="${compile.optimize}"
           >
+          <compilerarg line="--add-modules java.se.ee"/>
    </javac>
   <copy todir="${Dlib}/bzh/plealog/bioinfo/data/blast">
     <fileset dir="${Dsrc}/bzh/plealog/bioinfo/data/blast">
